--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Chat"  tabIcon="chatboxes"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Profile" tabIcon="person"></ion-tab>
+  <ion-tab [root]="tab1Root"  tabIcon="chatboxes"></ion-tab>
+  <ion-tab [root]="tab2Root" tabIcon="person"></ion-tab>
 </ion-tabs>
