--- a/src/pages/chats/chats.html
+++ b/src/pages/chats/chats.html
@@ -21,13 +21,12 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-item (click)="openChat()">
+    <ion-item  *ngFor="let item of items | async" (click)="openChat(item)">
       <ion-avatar item-start>
         <img src="https://wallpaperaccess.com/full/354039.jpg">
       </ion-avatar>
       <ion-label>
-        <h2>Finn</h2>
-        <p>Listen, I've had a pretty messed up day...</p>
+        <h2>{{item.username}}</h2>
       </ion-label>
     </ion-item>
 
@@ -37,7 +36,6 @@
       </ion-avatar>
       <ion-label>
         <h2>Jake</h2>
-        <p>I've got enough on my plate as it is, and I...</p>
       </ion-label>
     </ion-item>
 
