--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -13,11 +13,17 @@
 <ion-content padding>
 
     <ion-item>
-      <ion-label floating>Username</ion-label>
-      <ion-input type="text" [(ngModel)]="username"></ion-input>
+      <ion-label floating>E-mail</ion-label>
+      <ion-input type="text" [(ngModel)]="user.email"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label floating>Password</ion-label>
+      <ion-input type="password" [(ngModel)]="user.password"></ion-input>
     </ion-item>
 
 
-  <button ion-button block (click)="login()">Login</button>
+
+  <button ion-button block (click)="login(user)">Login</button>
+  <button ion-button block (click)="register()">Register</button>
   
 </ion-content>
