--- a/src/pages/chats/chats.html
+++ b/src/pages/chats/chats.html
@@ -9,33 +9,25 @@
     <ion-title>Direct Messages</ion-title>
     <ion-buttons end>
       <button >
-      <ion-icon name="add-outline"></ion-icon>
+      <ion-icon (click)="addFriend()" name="person-add"></ion-icon>
     </button>
   </ion-buttons>
   </ion-navbar>
 
-  <ion-toolbar>
-    <ion-searchbar color="dark"></ion-searchbar>
-  </ion-toolbar>
+<!--   <ion-toolbar>
+    <ion-searchbar color="dark" ></ion-searchbar>
+  </ion-toolbar> -->
 </ion-header>
 
 <ion-content padding>
   <ion-list>
-    <ion-item  *ngFor="let item of items | async" (click)="openChat(item)">
+    <ion-item  *ngFor="let item of (items | async)?.slice().reverse()" (click)="openChat(item)">
       <ion-avatar item-start>
-        <img src="https://wallpaperaccess.com/full/354039.jpg">
+        <img src="{{item.userpic}}">
       </ion-avatar>
       <ion-label>
         <h2>{{item.username}}</h2>
-      </ion-label>
-    </ion-item>
-
-    <ion-item (click)="openChat()">
-      <ion-avatar item-start>
-        <img src="https://pbs.twimg.com/profile_images/1446356883/adventure-time-with-finn-and-jake-john-dimaggio-2_400x400.jpg">
-      </ion-avatar>
-      <ion-label>
-        <h2>Jake</h2>
+        <p>{{item.lastMessage}}</p>
       </ion-label>
     </ion-item>
 
