--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -24,6 +24,6 @@
     <ion-input type="password" [(ngModel)]="user.password"></ion-input>
   </ion-item>
 
-  <button ion-button block (click)="register(user)">Register</button>
+  <button ion-button block (click)="regi(user)">Register</button>
 
 </ion-content>
