--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the LoginPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-title>Login</ion-title>
@@ -25,5 +20,7 @@
 
   <button ion-button block (click)="login(user)">Login</button>
   <button ion-button block (click)="register()">Register</button>
+  <div id="deneme"><p>Forgot your password?</p></div>
+  
   
 </ion-content>
